--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,13 +24,21 @@
     "better-auth:migrate": "better-auth migrate"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "@daveyplate/better-auth-ui": "^3.3.9",
+    "@prisma/client": "^5.22.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "better-auth": "^1.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
+    "prisma": "^5.22.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@better-auth/cli": "^1.4.7",
@@ -44,8 +52,8 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.6.0",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
