--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,11 @@
   "dependencies": {
     "@daveyplate/better-auth-ui": "^3.3.9",
     "@prisma/client": "^5.22.0",
-    "@t3-oss/env-nextjs": "^0.12.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@t3-oss/env-nextjs": "^0.13.10",
     "better-auth": "^1.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
