--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@daveyplate/better-auth-ui": "^3.3.9",
+    "@polar-sh/better-auth": "^1.6.3",
+    "@polar-sh/sdk": "^0.42.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
